--- a/AnimeginationApi/Web.config
+++ b/AnimeginationApi/Web.config
@@ -6,7 +6,8 @@
 <configuration>
   <appSettings>
     <add key="AnimeApiClientKey" value="AA46C009-49F8-4411-A4D6-131D4BA6D91B" />
-    <add key="SimilarsMaxNumber" value="6" />
+    <add key="SimilarsMaxNumber" value="12" />
+    <add key="VisitedMaxNumber" value="12"/>
     <add key="SearchMaxNumber" value="50" />
     <!--<add key="APIKey" value="B60F9E0A-3695-49F2-92EE-3106DA18B821" />-->
     <add key="emailServiceAPIKey" value="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" />
@@ -30,8 +31,6 @@
   </system.web>
   <system.webServer>
     <handlers>
-      
-      
       
       <remove name="WebDAV" />
       
